[package]
name = "isula_nri"
version = "0.1.0"
authors = ["Huawei iSula Team"]
edition = "2021"
build = "build.rs"
description = "provide nri rust-extensions for iSulad, it is called by iSulad and written in rust"
license = "Mulan PSL v2"

[dependencies]
protobuf = "3.1.0"
bytes = "1.6.1"
libc = "0.2.79"
byteorder = "1.3.2"
log = "0.4.8"
nix = "0.29.0"
ttrpc = "0.8.1"
lazy_static = "1.4.0"
isula_common = { path = "../common" }

[build-dependencies]
protoc-rust = "2.28.0"
cmd_lib = "1.9.4"
ttrpc-codegen = "0.4.2"

[lib]
name = "isula_nri"
crate-type = ["dylib"]
